--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: andreafindley@gmail.com
   facebook:
   flickr:
-  github: https://github.com/andrea-findley/
+  github: /andrea-findley/
   instagram:
   linkedin: andrea-findley-422101195/
   pinterest:
