--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Andrea Findley
 description: Data Analytics Researcher @ UT Austin
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: 
+avatar: https://avatars.githubusercontent.com/u/102648806?v=4
 
 #
 # Flags below are optional
